# nfe

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
nfe/: __init__.py  chave.py  cli.py  config.py  db.py  erros.py  fetch.py  modelos.py
nfe/parse/: __init__.py  sp.py  xml_nfe.py
tests/: conftest.py  test_chave.py  test_cli.py  test_db.py  test_parse_sp.py  test_parse_xml.py
tests/fixtures/: nfce_v4.xml  sp_nfce.html
