[project]
name = "nfe"
version = "0.1.0"
description = "Recebe uma URL de NFC-e/NF-e, baixa a página e a parseia em JSON estruturado (pronto para persistir)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
nfe = "nfe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nfe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
